welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugHunting:19: error: expected class or object definition
def hunt():Boolean = { 
^